# personal-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py
backend/agents/: __init__.py  calendar_agent.py  orchestrator.py  simple_agent.py  test_orchestrator.py  visualize_graph.py
backend/api/: __init__.py
backend/config/: __init__.py
backend/tools/: __init__.py  calendar_tools.py
